argocd/manifests/immich/base/middleware-kaylee-album-root-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kaylee-album-root-redirect
  namespace: immich
spec:
  redirectRegex:
    regex: ^https?://(www\.)?kayleewatkins\.com/?$
    replacement: https://kayleewatkins.com/s/kaylee-n-watkins
    permanent: true
