argocd/manifests/immich/base/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  labels:
    backup.levangie.dev/engine: postgres
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:bcf63357191b76a916ae5eb93464d65c07511da41e3bf7a8416db519b40b1c23
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 999
            runAsGroup: 999
          ports:
            - containerPort: 5432
              name: postgres
          readinessProbe:
            tcpSocket:
              port: postgres
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: postgres
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: immich-db-pvc
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 128Mi
