argocd/manifests/immich/base/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      enableServiceLinks: false
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:v3.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2283
              name: http
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
          volumeMounts:
            - name: media
              mountPath: /data
      volumes:
        - name: media
          nfs:
            server: 172.20.20.5
            path: /volume1/media/immich
