argocd/manifests/immich/base/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
