argocd/manifests/immich/base/service-power-tools.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-power-tools
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich-power-tools
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
