argocd/manifests/immich/base/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
