argocd/manifests/immich/base/ingress-power-tools.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-power-tools-ingress
  namespace: immich
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: immich-tools.levangie.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-power-tools
                port:
                  number: 3000
